--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 {currentPin === '1234' && (
                                     <div className="mt-4 bg-orange-50 border-l-4 border-[#E8B49A] p-3 text-left">
                                         <p className="text-xs text-[#0F1A33] font-medium">PIN temporaneo: 1234</p>
-                                        <p className="text-xs text-orange-300 mt-1">Modificalo nelle Impostazioni al primo accesso</p>
+                                        <p className="text-xs text-[#FBF0ED] mt-1">Modificalo nelle Impostazioni al primo accesso</p>
                                     </div>
                                 )}
                             </div>
@@ -298,5 +298,6 @@ if (showForm) {
 </body>
 
 </html>
+
 
 
