--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NutriDesk FB</title>
-<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='%231e293b'/%3E%3Ctext x='50' y='65' font-size='40' text-anchor='middle' fill='%23f59e0b' font-family='Arial, sans-serif' font-weight='bold'%3END%3C/text%3E%3C/svg%3E">
-<link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='%231e293b'/%3E%3Ctext x='50' y='65' font-size='40' text-anchor='middle' fill='%23f59e0b' font-family='Arial, sans-serif' font-weight='bold'%3END%3C/text%3E%3C/svg%3E">
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0F1A33">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="NutriDesk FB">
@@ -298,6 +298,7 @@ if (showForm) {
 </body>
 
 </html>
+
 
 
 
