--- a/guida-airtable.html
+++ b/guida-airtable.html
@@ -110,7 +110,7 @@
 </div>
 
 <div class="success">
-    <p>✅ Hai l'account? Perfetto! Ora duplicherai il template già pronto.</p>
+    <p>✅ Hai l'account? Perfetto! Ora duplicherai il template.</p>
 </div>
 
        <h2>📦 STEP 2 - Usa il Template Airtable</h2>
@@ -123,7 +123,7 @@
 <div class="step">
     <h3>Come duplicare il template:</h3>
     <ol>
-        <li>Clicca su questo link: <a href="IL_TUO_LINK_TEMPLATE" style="color: #E8B49A; font-weight: bold;" target="_blank">Duplica Template NutriDesk</a></li>
+        <li>Clicca su questo link: <a href="https://airtable.com/app4DAkw32LKyJSRU/shrQmvy0LtkxJyuv8" style="color: #E8B49A; font-weight: bold;" target="_blank">Duplica Template NutriDesk</a></li>
         <li>Airtable ti chiederà di accedere o creare un account</li>
         <li>Clicca <strong>"Copy base"</strong></li>
         <li>Il database si duplica nel tuo account!</li>
@@ -173,11 +173,11 @@
         </div>
 
         <div class="success">
-            <h3>✅ Complimenti! Hai finito!</h3>
+            <h3>✅ Complimenti!</h3>
             <p>Hai creato con successo:</p>
             <ul>
-                <li>✅ Tabella Pazienti con campi automatici</li>
-                <li>✅ Tabella Visite con BMI calcolato</li>
+                <li>✅ Tabella Pazienti</li>
+                <li>✅ Tabella Visite</li>
                 <li>✅ Collegamento tra le tabelle</li>
                 <li>✅ API Key per la sincronizzazione</li>
             </ul>
@@ -189,16 +189,16 @@
             <li>Inizia ad inserire i tuoi pazienti su Airtable</li>
             <li>Aggiungi le visite per ogni paziente</li>
             <li>I campi automatici (numero visite, giorni dall'ultima visita, BMI) si aggiorneranno da soli!</li>
-            <li>La sincronizzazione con l'app sarà disponibile a breve</li>
+            <li>La sincronizzazione con l'app sarà disponibile in breve tempo</li>
         </ol>
 
         <div class="warning">
             <h3>🔒 Note sulla Privacy</h3>
             <p>Ricorda che sei responsabile del trattamento dei dati dei tuoi pazienti secondo il GDPR. Airtable offre strumenti conformi, ma devi:</p>
             <ul>
-                <li>Non condividere l'API Key con nessuno</li>
-                <li>Usare password sicure per l'account Airtable</li>
-                <li>Informare i pazienti sul trattamento dei dati</li>
+                <li>non condividere l'API Key con nessuno</li>
+                <li>usare password sicure per l'account Airtable</li>
+                <li>informare i pazienti sul trattamento dei dati</li>
             </ul>
         </div>
 
