--- a/index.html
+++ b/index.html
@@ -473,9 +473,16 @@ if (showForm) {
         <div><p className="text-gray-500">Rimanenti</p><p className="font-semibold text-2xl text-[#E8B49A]">{p.remainingVisits}</p></div>
     </div>
 </div>
-
-{p.allergies && <div className="bg-red-50 border-l-4 border-red-400 rounded-r-2xl p-4">
-                                {p.allergies && <div className="bg-red-50 border-l-4 border-red-400 rounded-r-2xl p-4"><p className="text-xs font-medium text-red-800 mb-1">⚠️ ALLERGIE / INTOLLERANZE / PATOLOGIE / ESAMI</p><p className="text-sm text-red-700 font-semibold">{p.allergies}</p></div>}
+{p.allergies && (
+    <div className="bg-red-50 border-l-4 border-red-400 rounded-r-2xl p-4">
+        <p className="text-xs font-medium text-red-800 mb-1">
+            ⚠️ ALLERGIE / INTOLLERANZE / PATOLOGIE / ESAMI
+        </p>
+        <p className="text-sm text-red-700 font-semibold">
+            {p.allergies}
+        </p>
+    </div>
+)}
                             {p.notes && <div className="bg-blue-50 rounded-2xl p-4"><p className="text-xs font-medium text-blue-800 mb-2">📝 Note principali</p><p className="text-sm text-gray-700">{p.notes}</p></div>}
                             {p.visits.length > 0 && <div className="bg-white rounded-2xl p-4 shadow-sm"><h3 className="font-semibold mb-3 flex items-center gap-2"><IconActivity size={18} />Andamento peso totale</h3><div className="flex items-center gap-4"><div className="text-3xl font-bold text-gray-800">{p.visits[0].weight} kg</div>{trend !== 0 && <div className={`flex items-center gap-1 ${trend < 0 ? 'text-green-600' : 'text-red-600'}`}>{trend < 0 ? <IconTrendDown size={20} /> : <IconTrendUp size={20} />}<span className="font-semibold">{Math.abs(trend).toFixed(1)} kg</span></div>}</div></div>}
                             <div className="bg-white rounded-2xl p-4 shadow-sm"><h3 className="font-semibold mb-3 flex items-center gap-2"><IconCalendar size={18} />Storico visite</h3>{p.visits.length === 0 ? <p className="text-gray-400 text-sm text-center py-4">Nessuna visita registrata</p> : <div className="space-y-3">{p.visits.map((v, i) => <div key={i} className="border-l-2 border-slate-300 pl-4 py-2 relative"><div className="absolute right-0 top-2 flex gap-2"><button onClick={(e) => { e.stopPropagation(); setFormData({ date: v.date, weight: v.weight.toString(), bmi: v.bmi || '', circumferences: v.circumferences || '', notes: v.notes || '' }); setEditingIdx(i); setShowForm('editVisit'); }} className="text-blue-500 hover:text-blue-700"><IconEdit size={16} /></button><button onClick={(e) => delVisit(p.id, i, e)} className="text-red-500 hover:text-red-700"><IconTrash size={16} /></button></div><div className="flex justify-between pr-16 mb-2"><p className="font-medium text-gray-800">{new Date(v.date).toLocaleDateString('it-IT', { day: 'numeric', month: 'long', year: 'numeric' })}</p><span className="text-[#0F1A33] font-semibold">{v.weight} kg</span></div>{v.bmi && <div className="mb-2"><span className={`inline-block px-2 py-1 rounded-full text-xs font-medium border ${getBMIColor(v.bmi)}`}>BMI: {v.bmi} - {getBMILabel(v.bmi)}</span></div>}{v.circumferences && <p className="text-xs text-gray-600 mb-1">{v.circumferences}</p>}{v.notes && <p className="text-sm text-gray-700 italic">{v.notes}</p>}</div>)}</div>}</div>
@@ -535,4 +542,5 @@ if (showForm) {
 </body>
 
 </html>
+
 
