--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#0F1A33">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="NutriDesk FB">
 <meta name="theme-color" content="#0F1A33">
@@ -542,5 +543,6 @@ if (showForm) {
 </body>
 
 </html>
+
 
 
