--- a/index.html
+++ b/index.html
@@ -102,7 +102,21 @@ React.useEffect(() => {
         }
     }
 }, [isLocked]);
+React.useEffect(() => {
+    if (!isLocked) {
+        const checkTimeout = setInterval(() => {
+            const lastActivity = localStorage.getItem('nutridesk_lastActivity');
+            if (lastActivity) {
+                const fiveMinutes = 5 * 60 * 1000;
+                if (Date.now() - parseInt(lastActivity) > fiveMinutes) {
+                    setIsLocked(true);
+                }
+            }
+        }, 10000); // Controlla ogni 10 secondi
 
+        return () => clearInterval(checkTimeout);
+    }
+}, [isLocked]);
 React.useEffect(() => {
     const updateActivity = () => {
         if (!isLocked) {
@@ -145,7 +159,7 @@ const loadFromAirtable = async () => {
                 birthDate: fields['Data di nascita'] || '',
                 height: fields.Altezza || '',
                 status: fields.Stato === 'Concluso' ? 'completed' : 'active',
-                allergies: fields['Allergie/Intolleranze/Patologie rilevanti'] || '',
+                allergies: fields['Allergie/Intolleranze/Patologie/Farmaci'] || '',
                 notes: fields['Note principali'] || '',
                 totalVisitsPurchased: fields['Visite totali'] || 0,
                 visits: patientVisits,
@@ -204,7 +218,7 @@ const loadFromAirtable = async () => {
             'Data di nascita': formData.birthDate,
             'Altezza': formData.height ? parseInt(formData.height) : null,
             'Stato': formData.status === 'completed' ? 'Concluso' : 'Attivo',
-            'Allergie/Intolleranze/Patologie rilevanti': formData.allergies || '',
+            'Allergie/Intolleranze/Patologie/Farmaci': formData.allergies || '',
             'Note principali': formData.notes || '',
             'Visite totali': formData.totalVisitsPurchased ? parseInt(formData.totalVisitsPurchased) : 0
         };
@@ -423,7 +437,7 @@ if (showForm) {
                                     <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Data di nascita *</label><input type="date" value={formData.birthDate || ''} onChange={(e) => setFormData({...formData, birthDate: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                     <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Altezza (cm)</label><input type="number" placeholder="170" value={formData.height || ''} onChange={(e) => setFormData({...formData, height: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                     <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Stato</label><select value={formData.status || 'active'} onChange={(e) => setFormData({...formData, status: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none"><option value="active">Attivo</option><option value="completed">Concluso</option></select></div>
-                                    <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Allergie / Intolleranze / Patologie / Esami</label><input type="text" placeholder="es. Lattosio" value={formData.allergies || ''} onChange={(e) => setFormData({...formData, allergies: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
+                                    <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Allergie / Intolleranze / Patologie / Farmaci</label><input type="text" placeholder="es. Lattosio" value={formData.allergies || ''} onChange={(e) => setFormData({...formData, allergies: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                     <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Note</label><textarea rows={3} placeholder="Obiettivi..." value={formData.notes || ''} onChange={(e) => setFormData({...formData, notes: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Visite totali pacchetto</label><input type="number" placeholder="7" value={formData.totalVisitsPurchased || ''} onChange={(e) => setFormData({...formData, totalVisitsPurchased: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                 </>
@@ -474,11 +488,21 @@ if (showForm) {
         <div><p className="text-gray-500">Rimanenti</p><p className="font-semibold text-2xl text-[#E8B49A]">{p.remainingVisits}</p></div>
     </div>
 </div>
+  {p.totalVisitsPurchased > 0 && (
+    <div className="mt-3 pt-3 border-t">
+        <p className="text-xs text-gray-500 mb-1">Numero visite totali</p>
+        <div className="flex items-center gap-2">
+            <span className="text-lg font-bold text-[#0F1A33]">{p.totalVisitsPurchased} totali</span>
+            <span className="text-sm text-gray-400">•</span>
+            <span className="text-sm text-gray-600">{p.totalVisits} fatte</span>
+            <span className="text-sm text-gray-400">•</span>
+            <span className="text-sm text-[#E8B49A] font-semibold">{p.remainingVisits} rimanenti</span>
+        </div>
+    </div>
+)}                          
 {p.allergies && (
     <div className="bg-red-50 border-l-4 border-red-400 rounded-r-2xl p-4">
-        <p className="text-xs font-medium text-red-800 mb-1">
-            ⚠️ ALLERGIE / INTOLLERANZE / PATOLOGIE / ESAMI
-        </p>
+        <p className="text-xs font-medium text-red-800 mb-1">⚠️ ALLERGIE / INTOLLERANZE / PATOLOGIE / FARMACI</p>
         <p className="text-sm text-red-700 font-semibold">
             {p.allergies}
         </p>
@@ -543,6 +567,7 @@ if (showForm) {
 </body>
 
 </html>
+
 
 
 
