--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@ if (showForm === 'addPatient') {
         setShowForm(null);
         setFormData({});
     } catch (error) {
-        alert('Errore salvataggio');
+    console.error('Errore completo:', error);
+    alert('Errore salvataggio: ' + error.message);
     } finally {
         setLoading(false);
     }
@@ -267,7 +268,8 @@ if (showForm === 'addVisit') {
         setFormData({});
         setEditingIdx(null);
     } catch (error) {
-        alert('Errore salvataggio');
+    console.error('Errore completo:', error);
+    alert('Errore salvataggio: ' + error.message);
     } finally {
         setLoading(false);
     }
@@ -439,9 +441,9 @@ if (showForm) {
                                     <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Data di nascita *</label><input type="date" value={formData.birthDate || ''} onChange={(e) => setFormData({...formData, birthDate: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                     <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Altezza (cm)</label><input type="number" placeholder="170" value={formData.height || ''} onChange={(e) => setFormData({...formData, height: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                     <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Stato</label><select value={formData.status || 'active'} onChange={(e) => setFormData({...formData, status: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none"><option value="active">Attivo</option><option value="completed">Concluso</option></select></div>
-                                    <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Allergie / Intolleranze / Patologie / Farmaci</label><input type="text" placeholder="es. Lattosio" value={formData.allergies || ''} onChange={(e) => setFormData({...formData, allergies: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
+                                    <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Allergie/Intolleranze/Patologie/Farmaci</label><input type="text" placeholder="es. Lattosio" value={formData.allergies || ''} onChange={(e) => setFormData({...formData, allergies: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                     <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Note</label><textarea rows={3} placeholder="Obiettivi..." value={formData.notes || ''} onChange={(e) => setFormData({...formData, notes: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
-                                    <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Visite totali pacchetto</label><input type="number" placeholder="7" value={formData.totalVisitsPurchased || ''} onChange={(e) => setFormData({...formData, totalVisitsPurchased: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
+                                    <div className="bg-white rounded-2xl p-5 shadow-sm"><label className="block text-sm font-medium text-gray-700 mb-2">Visite totali pacchetto</label><input type="number" placeholder="0" value={formData.totalVisitsPurchased || ''} onChange={(e) => setFormData({...formData, totalVisitsPurchased: e.target.value})} className="w-full border-2 rounded-xl p-3 focus:border-[#E8B49A] focus:outline-none" /></div>
                                 </>
                             ) : (
                                 <>
@@ -485,22 +487,24 @@ if (showForm) {
         </span>
         {p.daysSinceLastVisit > 60 && <div className="text-2xl">🔴</div>}
     </div>
-    <div className="grid grid-cols-3 gap-3 text-sm">
-        <div><p className="text-gray-500">Ultima visita</p><p className="font-semibold">{p.lastVisit ? new Date(p.lastVisit).toLocaleDateString('it-IT') : '-'}</p><p className="text-xs text-gray-400">{p.daysSinceLastVisit || 0} giorni fa</p></div>
-        <div><p className="text-gray-500">Visite fatte</p><p className="font-semibold text-2xl">{p.totalVisits}</p></div>
-        <div><p className="text-gray-500">Rimanenti</p><p className="font-semibold text-2xl text-[#E8B49A]">{p.remainingVisits}</p></div>
+    <div className="grid grid-cols-4 gap-2 text-sm">
+    <div>
+        <p className="text-gray-500 text-xs">Ultima visita</p>
+        <p className="font-semibold text-sm">{p.lastVisit ? new Date(p.lastVisit).toLocaleDateString('it-IT') : '-'}</p>
+        <p className="text-xs text-gray-400">{p.daysSinceLastVisit || 0} gg fa</p>
     </div>
-</div>
-  {p.totalVisitsPurchased > 0 && (
-    <div className="mt-3 pt-3 border-t">
-        <p className="text-xs text-gray-500 mb-1">Numero visite totali</p>
-        <div className="flex items-center gap-2">
-            <span className="text-lg font-bold text-[#0F1A33]">{p.totalVisitsPurchased} totali</span>
-            <span className="text-sm text-gray-400">•</span>
-            <span className="text-sm text-gray-600">{p.totalVisits} fatte</span>
-            <span className="text-sm text-gray-400">•</span>
-            <span className="text-sm text-[#E8B49A] font-semibold">{p.remainingVisits} rimanenti</span>
-        </div>
+    <div>
+        <p className="text-gray-500 text-xs">Totali</p>
+        <p className="font-semibold text-xl text-[#0F1A33]">{p.totalVisitsPurchased || 0}</p>
+    </div>
+    <div>
+        <p className="text-gray-500 text-xs">Fatte</p>
+        <p className="font-semibold text-xl text-blue-600">{p.totalVisits}</p>
+    </div>
+    <div>
+        <p className="text-gray-500 text-xs">Rimanenti</p>
+        <p className="font-semibold text-xl text-[#E8B49A]">{p.remainingVisits}</p>
+    </div>
     </div>
 )}                          
 {p.allergies && (
@@ -576,3 +580,4 @@ if (showForm) {
 </body>
 
 </html>
+
