--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@ if (showForm) {
         <p className="font-semibold text-xl text-[#E8B49A]">{p.remainingVisits}</p>
     </div>
     </div>
+</div>                                
 )}                          
 {p.allergies && (
     <div className="bg-red-50 border-l-4 border-red-400 rounded-r-2xl p-4">
@@ -580,4 +581,5 @@ if (showForm) {
 </body>
 
 </html>
+
 
