--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ if (showForm) {
         </span>
         {p.daysSinceLastVisit > 60 && <div className="text-2xl">🔴</div>}
     </div>
-    <div className="grid grid-cols-4 text-sm" style={{gap: '0.5rem 1.5rem'}}>
+    <div className="grid text-sm" style={{display: 'grid', gridTemplateColumns: '1fr 0.6fr 0.6fr 0.6fr', gap: '0.5rem 1rem'}}>
     <div>
         <p className="text-gray-500 text-xs">Ultima visita</p>
         <p className="font-semibold text-sm">{p.lastVisit ? new Date(p.lastVisit).toLocaleDateString('it-IT') : '-'}</p>
@@ -498,7 +498,7 @@ if (showForm) {
         <p className="font-semibold text-xl text-[#0F1A33]">{p.totalVisitsPurchased || 0}</p>
     </div>
     <div>
-        <p className="text-gray-500 text-xs">Fatte</p>
+        <p className="text-gray-500 text-xs">Svolte</p>
         <p className="font-semibold text-xl text-blue-600">{p.totalVisits}</p>
     </div>
     <div>
@@ -580,6 +580,7 @@ if (showForm) {
 </body>
 
 </html>
+
 
 
 
